# CourseworkOS

./: README.md  build.sh  docker_client.sh  run.sh  run_client.sh
client/: Dockerfile
client/src/: lib.rs  main.rs
logserver/: .gitignore  Cargo.toml
logserver/src/: main.rs
logserver1/: Cargo.toml
logserver1/src/: main.rs
server1/: Cargo.toml
server1/src/: main.rs
server2/: Cargo.toml
server2/src/: lib.rs  main.rs
servers/: Cargo.toml
servers/src/: lib.rs  main1.rs  main2.rs
